2005-09-03  Bas Wijnen  <shevek@fmf.nl>

	* Dialog.c, main.c, multi.c: Add G_GNUC_UNUSED where appropriate.
	* Makefile.am: Use AM_CFLAGS instead of CFLAGS.
	* convert.c, main.c: Add include.
	* multi.c: Check for sane input, initialise socklen_t before use.
	* gfp.h, history.c, interface.c, logic.c, main.c: Use ints instead of
	chars for most types.
	* main.c: Load images differently
	* main.c, multi.c: Use %zd for printing sizes.
	* Most files: Add proper copyright notice.

0.25 (January 14 2000): A small bug fix.
* Removed a memory leak reported as Debian bug #50140 by Daniel Burrows.
* Since my last update, newer versions of GTK have added a mysterious new
error message to the startup of the game, wherein it will inform you that
something that shouldn't be realized is, or something that is realized
shouldn't be.  In any case, the GTK developer that I received e-mail from
thinks that this is because I'm trying to hook the size allocation signal,
which I obviously was not, but then I described the error in a rather
shoddy fashion so I probably deserved a shoddy answer.  If I instead of
realizing, perform an actual show followed by a hide, I get a different
error at a different place and I'm treated to a lovely empty window
popping up as well.  I guess the problem is that I'm trying to attach my
pixmaps to multiple windows in a cheaty way or something, and really I
ought to simply use GNOME because everyone else uses it and there's
probably some #ifdef YOU_ARE_MIGUEL in GTK to allow this sort of stuff.  
Either that, or perhaps if I actually spent many more hours than I already
have trying to understand the GTK source code I just might be able to
figure it out, and get rid of this tiny little entirely non-critical error
message.  Alternatively, I could use GNOME.  Well, I have for my new game
Glotski, but nobody seems to be e-mailing about the game except to say
that they can't get it to work so I'll call it all a bust and leave this