@@ -26,7 +26,8 @@ clean:
 	rm -f unpack-stamp configure-stamp build-stamp install-stamp
 	-$(MAKE) maintainer-clean
 	rm -f Makefile.in aclocal.m4 config.guess config.sub configure \
-		install-sh marblepix.h missing mkinstalldirs tilepix.h
+		install-sh marblepix.h missing mkinstalldirs tilepix.h \
+		depcomp
 	dh_clean
 
 install: install-stamp
